--- a/Class6Demo/Base.lproj/Main.storyboard
+++ b/Class6Demo/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--Profile-->
         <scene sceneID="uK9-yr-JEV">
             <objects>
                 <viewController id="cnB-EZ-703" sceneMemberID="viewController">
@@ -20,22 +20,22 @@
                         <color key="backgroundColor" red="1" green="0.20853845918765479" blue="0.19056822304405463" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="oLR-JN-Zf1"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="Vqf-Os-47A"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="User" id="Vqf-Os-47A"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZTA-zK-w5Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="447" y="1567"/>
+            <point key="canvasLocation" x="-532" y="1149"/>
         </scene>
-        <!--Item 1-->
+        <!--New Post-->
         <scene sceneID="QDy-w4-2b1">
             <objects>
-                <viewController id="hf2-Ih-mZ7" customClass="NewPostViewController" customModule="Class6Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="New Post" id="hf2-Ih-mZ7" customClass="NewPostViewController" customModule="Class6Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5kF-5R-Q5F">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XdG-hW-q3W">
-                                <rect key="frame" x="44" y="124" width="286" height="128"/>
+                                <rect key="frame" x="40" y="123" width="286" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.76953125" green="0.76953125" blue="0.76953125" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -62,10 +62,10 @@
                                     <action selector="onChooseImage:" destination="hf2-Ih-mZ7" eventType="touchUpInside" id="uF9-6f-M3n"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="New Post" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYM-CV-WCz">
-                                <rect key="frame" x="120" y="66" width="135" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Say Something:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efa-5p-TkZ">
+                                <rect key="frame" x="40" y="94" width="120" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HOp-Fd-qyZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="493.60000000000002" y="771.36431784107947"/>
+            <point key="canvasLocation" x="1058" y="104"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="F9j-iK-DtV">
@@ -93,14 +93,97 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="HDM-rU-h5g" kind="relationship" relationship="viewControllers" id="5na-eF-eIW"/>
-                        <segue destination="hf2-Ih-mZ7" kind="relationship" relationship="viewControllers" id="hzi-pd-qKK"/>
+                        <segue destination="j1R-ZZ-KKF" kind="relationship" relationship="viewControllers" id="RuU-ff-J1x"/>
                         <segue destination="cnB-EZ-703" kind="relationship" relationship="viewControllers" id="3WJ-SP-d6q"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lGS-L8-utL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1290" y="687"/>
+            <point key="canvasLocation" x="-1462" y="788"/>
+        </scene>
+        <!--Feed-->
+        <scene sceneID="Tqq-LN-fU6">
+            <objects>
+                <tableViewController id="5iG-Rz-bUn" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="OCi-Pz-bDd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="295" id="brM-PB-cyy">
+                                <rect key="frame" x="0.0" y="28" width="375" height="295"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="brM-PB-cyy" id="mz0-Tf-fmh">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="294.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n0R-3l-drX">
+                                            <rect key="frame" x="16" y="11" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="srY-9x-4rc">
+                                            <rect key="frame" x="74" y="11" width="86" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="Post Text..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WNJ-YA-rke">
+                                            <rect key="frame" x="16" y="69" width="343" height="69"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kxy-53-OxQ">
+                                            <rect key="frame" x="16" y="146" width="343" height="125"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwE-v6-8Iu">
+                                            <rect key="frame" x="74" y="40" width="36" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="5iG-Rz-bUn" id="ffq-bZ-DEg"/>
+                            <outlet property="delegate" destination="5iG-Rz-bUn" id="acT-S7-fqX"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Feed" id="2VS-p4-IO8">
+                        <barButtonItem key="leftBarButtonItem" systemItem="search" id="1su-Yd-DTo"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="JvG-cw-g1h">
+                            <connections>
+                                <segue destination="hf2-Ih-mZ7" kind="show" id="FiD-Xu-EFK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8dE-ld-lg2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="228" y="103.89805097451276"/>
+        </scene>
+        <!--Feed-->
+        <scene sceneID="7Di-yU-bbw">
+            <objects>
+                <navigationController id="j1R-ZZ-KKF" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Feed" image="Feed" id="G8v-2h-ZyA"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4pz-6b-UT6">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="5iG-Rz-bUn" kind="relationship" relationship="rootViewController" id="3Gs-IJ-v3P"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VMk-9j-ARB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-532" y="104"/>
         </scene>
         <!--Students-->
         <scene sceneID="Xvl-lE-cyw">
@@ -117,7 +200,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S5L-kb-MSS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-473" y="120"/>
+            <point key="canvasLocation" x="-1188" y="-930"/>
         </scene>
         <!--Students-->
         <scene sceneID="GrG-B1-ad1">
@@ -180,7 +263,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AfC-rk-mE4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="493.60000000000002" y="118.29085457271366"/>
+            <point key="canvasLocation" x="-393" y="-931"/>
         </scene>
         <!--Student Details View Controller-->
         <scene sceneID="zIx-nr-82p">
@@ -207,7 +290,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c5x-54-WgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1381.5999999999999" y="-577.06146926536735"/>
+            <point key="canvasLocation" x="446" y="-1330"/>
         </scene>
         <!--New Student-->
         <scene sceneID="zRe-Vx-Sb9">
@@ -296,10 +379,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zpt-C9-DPm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1370.4000000000001" y="113.79310344827587"/>
+            <point key="canvasLocation" x="446" y="-647"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Feed" width="30" height="30"/>
+        <image name="User" width="30" height="30"/>
         <image name="avatar" width="210" height="240"/>
     </resources>
 </document>
